Add AIR to recipe choices when ingredient is allowed to be empty.